#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.69)
AC_INIT(csvtools, 0.1, timm@knp.de)
AC_CONFIG_SRCDIR(src/csv-join.cpp)
#AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
#AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lm':
#AC_CHECK_LIB([m], [main])

# Checks for header files.
#AC_CHECK_HEADERS([stdlib.h])

# Checks for typedefs, structures, and compiler characteristics.
#AC_CHECK_HEADER_STDBOOL
#AC_C_INLINE
#AC_TYPE_SIZE_T

# Checks for library functions.
#AC_CHECK_FUNCS([sqrt])

#AC_CONFIG_FILES([slides/Makefile])
AC_OUTPUT(Makefile src/Makefile docs/Makefile examples/Makefile man/Makefile)
